--- a/tic-tac-toe-api/Properties/launchSettings.json
+++ b/tic-tac-toe-api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "http://26.171.188.146:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,8 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://26.171.188.146:5001;http://26.171.188.146:5001",
+      "launchUrl": "swagger/index.html",
+      "applicationUrl": "https://26.171.188.146:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -32,8 +32,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://26.171.188.146:5001;https://26.171.188.146:5001",
+      "launchUrl": "swagger/index.html",
+      "applicationUrl": "https://26.171.188.146:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
